Update rankings, players views and cleanup unused files

--- a/.gitignore
+++ b/.gitignore
@@ -49,12 +49,13 @@ logs/
 # 个人开发文件（可选，取消注释以忽略）
 进度检查/
 
-# 文档文件
-*.pdf
-*.docx
-需要修改的提示词.txt
-my.html
-execute_db_update.py
-execute_sample_likes.py
+# 报告和大文件（本地构建和资源，不上传到仓库）
+报告模板.md
+报告模板/
+player_images/
+球队logo/
+
+# NBA数据获取工具中的CSV文件
+获取并上传真实nba数据（再次运行需要放到根目录）/*.csv
 
 
