Update documentation, remove design doc, and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -51,11 +51,10 @@ logs/
 
 # 报告和大文件（本地构建和资源，不上传到仓库）
 报告模板.md
-报告模板/
 player_images/
 球队logo/
 
 # NBA数据获取工具中的CSV文件
 获取并上传真实nba数据（再次运行需要放到根目录）/*.csv
 
-
+NBA比赛数据管理系统实现报告.md
